dataset1235/2025-2/805158916/users/2200760145/executions/1584167357_1630070338.log
== SUBMISSION (2025-08-27 14:24:40)
-- CODE: 
preco_unitario = float(input())
quantidade = (input())
valor_total = preco_unitario * quantidade
print (valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = (input())
                  ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = (input())
                  ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = (input())
                  ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = (input())
                  ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = (input())
                  ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = (input())
                  ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:24:35)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print (valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:33:01)
-- CODE: 
import math
volume = (4/3) * math.pi * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:30:59)
-- CODE: 
volume = (4/3) * math.pi * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:24:09)
-- CODE: 
preco_unitario = float(int(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print (valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(int(input())
                          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(int(input())
                          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(int(input())
                          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(int(input())
                          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(int(input())
                          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(int(input())
                          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:25:41)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:36:43)
-- CODE: 
numero = float(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
25.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
110.25
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
10000.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
146.41
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
20.25
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:36:09)
-- CODE: 
numero = float(input)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = float(input)
             ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = float(input)
             ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = float(input)
             ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = float(input)
             ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = float(input)
             ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = float(input)
             ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:26:47)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:26:38)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:19:42)
-- CODE: 
numero = float(input())
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
21.0
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
-200.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
24.2
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
-9.0
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:33:19)
-- CODE: 
import math
volume = (4/3) * math.pi * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:18:31)
-- CODE: 
numero = float(input())
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
21.0
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
-200.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
24.2
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
-9.0
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:32:34)
-- CODE: 
import math
volume = (4/3) * math.pi * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:20:10)
-- CODE: 
numero = float(input())
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
21.0
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
-200.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
24.2
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
-9.0
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:32:26)
-- CODE: 
import math
volume = (4/3) * math.pi * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:26:53)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:32:23)
-- CODE: 
import math
volume = (4/3) * math.pi * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:28:03)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:33:17)
-- CODE: 
import math
volume = (4/3) * math.pi * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:26:39)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:24:59)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print (valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:33:18)
-- CODE: 
import math
volume = (4/3) * math.pi * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:30:02)
-- CODE: 
volume = (4/3) * math.pi * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:22:14)
-- CODE: 
numero = float(input())
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
21.0
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
-200.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
24.2
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
-9.0
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:24:58)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print (valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:32:25)
-- CODE: 
import math
volume = (4/3) * math.pi * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:36:05)
-- CODE: 
numero = float(input)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = float(input)
             ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = float(input)
             ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = float(input)
             ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = float(input)
             ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = float(input)
             ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = float(input)
             ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:34:27)
-- CODE: 
import math
volume = (4/3) * (math.pi) * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * (math.pi) * (r**3)
                                  ^
NameError: name 'r' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * (math.pi) * (r**3)
                                  ^
NameError: name 'r' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * (math.pi) * (r**3)
                                  ^
NameError: name 'r' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * (math.pi) * (r**3)
                                  ^
NameError: name 'r' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * (math.pi) * (r**3)
                                  ^
NameError: name 'r' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * (math.pi) * (r**3)
                                  ^
NameError: name 'r' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:26:45)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:24:56)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print (valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:33:19)
-- CODE: 
import math
volume = (4/3) * math.pi * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:30:58)
-- CODE: 
volume = (4/3) * math.pi * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:24:42)
-- CODE: 
preco_unitario = float(input())
quantidade = (input())
valor_total = preco_unitario * quantidade
print (valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = (input())
                  ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = (input())
                  ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = (input())
                  ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = (input())
                  ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = (input())
                  ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = (input())
                  ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:33:16)
-- CODE: 
import math
volume = (4/3) * math.pi * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = (4/3) * math.pi * (r**3)
                                ^
NameError: name 'r' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:31:28)
-- CODE: 
volume = (4/3) * math.pi * (r**3)
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    volume = (4/3) * math.pi * (r**3)
                     ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:24:33)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print (valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:26:52)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade = int(input())
                     ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
